[project]
name = "dbt-remote-state"
version = "0.1.0"
description = ""
authors = [
    {name = "Morgan Kerle",email = "morgan.kerle@nine.com.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

